[project]
name = "neetcode-prep"
version = "0.1.0"
description = "Spaced-repetition recall engine for the NeetCode 150 sprint."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]
