[project]
name = "today-dsa"
version = "0.1.0"
description = "Local-first DSA interview prep engine for Obsidian. Tells you what to do today, not what to study this month."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
prep = "recall_engine:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["recall_engine"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]
